--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -52,73 +52,90 @@ body {
   // j'y rajoute 5px de marge sur les côté
   max-width: calc(9 * 100px + 9 * 10px);
   margin: 0 auto;
+  background: rgb(133, 133, 133);
   .item {
     position: relative;
     width: 100px;
     height: 100px;
-    padding: 10px;
     margin: 5px;
     cursor: pointer;
     overflow: hidden;
-    img {
-      @include absolute;
-
-      &.front {
-        bottom: unset;
-        &__0 {
-          top: 0;
+    perspective: 1000px;
+    .card {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
+      img {
+        @include absolute;
+        -webkit-backface-visibility: hidden; /* Safari */
+        backface-visibility: hidden;
+        &.back {
         }
-        &__1 {
-          top: -100px;
+        &.front {
+          transform: rotateY(180deg);
+          bottom: unset;
+          &.card_0 {
+            top: 0;
+          }
+          &.card_1 {
+            top: -100px;
+          }
+          &.card_2 {
+            top: -200px;
+          }
+          &.card_3 {
+            top: -300px;
+          }
+          &.card_4 {
+            top: -400px;
+          }
+          &.card_5 {
+            top: -500px;
+          }
+          &.card_6 {
+            top: -600px;
+          }
+          &.card_7 {
+            top: -700px;
+          }
+          &.card_8 {
+            top: -800px;
+          }
+          &.card_9 {
+            top: -900px;
+          }
+          &.card_10 {
+            top: -1000px;
+          }
+          &.card_11 {
+            top: -1100px;
+          }
+          &.card_12 {
+            top: -1200px;
+          }
+          &.card_13 {
+            top: -1300px;
+          }
+          &.card_14 {
+            top: -1400px;
+          }
+          &.card_15 {
+            top: -1500px;
+          }
+          &.card_16 {
+            top: -1600px;
+          }
+          &.card_17 {
+            top: -1700px;
+          }
         }
-        &__2 {
-          top: -200px;
-        }
-        &__3 {
-          top: -300px;
-        }
-        &__4 {
-          top: -400px;
-        }
-        &__5 {
-          top: -500px;
-        }
-        &__6 {
-          top: -600px;
-        }
-        &__7 {
-          top: -700px;
-        }
-        &__8 {
-          top: -800px;
-        }
-        &__9 {
-          top: -900px;
-        }
-        &__10 {
-          top: -1000px;
-        }
-        &__11 {
-          top: -1100px;
-        }
-        &__12 {
-          top: -1200px;
-        }
-        &__13 {
-          top: -1300px;
-        }
-        &__14 {
-          top: -1400px;
-        }
-        &__15 {
-          top: -1500px;
-        }
-        &__16 {
-          top: -1600px;
-        }
-        &__17 {
-          top: -1700px;
-        }
+      }
+    }
+    &:hover {
+      .card {
+        transform: rotateY(180deg);
       }
     }
   }
