--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -34,6 +34,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-family: Arial, Sans-serif;
 }
 
 body {
@@ -41,7 +42,12 @@ body {
   height: 100vh;
   overflow: hidden;
 }
-
+h1 {
+  margin: 0 auto;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 45px;
+}
 .board {
   flex-direction: row;
   flex-wrap: wrap;
@@ -173,7 +179,31 @@ body {
   }
 }
 .introduction {
+  width: 350px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   &.remove {
     display: none;
+  }
+  .leaderBoard {
+    width: 100%;
+  }
+  button {
+    background: none;
+    border: none;
+    text-transform: uppercase;
+    margin: 0 auto;
+    cursor: pointer;
+    border: 1px solid #000;
+    background: transparent;
+    padding: 5px 20px;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      background: #151515;
+      color: #fff;
+    }
   }
 }
