--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -49,6 +49,7 @@ h1 {
   margin-bottom: 45px;
 }
 .board {
+  position: relative;
   flex-direction: row;
   flex-wrap: wrap;
   // je calcule la taille necessaire a mon board;
@@ -62,90 +63,121 @@ h1 {
   &.display {
     display: flex;
   }
-  .item {
+  .win,
+  .lose {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    &.display {
+      display: flex;
+    }
+    .win_animation {
+      width: 50%;
+    }
+  }
+  .game {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     position: relative;
-    width: 100px;
-    height: 100px;
-    margin: 5px;
-    cursor: pointer;
-    overflow: hidden;
-    perspective: 1000px;
-    .card {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transition: transform 0.8s;
-      transform-style: preserve-3d;
-      img {
+    &.disable {
+      &::after {
+        content: '';
         @include absolute;
-        -webkit-backface-visibility: hidden; /* Safari */
-        backface-visibility: hidden;
-        &.back {
-        }
-        &.front {
-          transform: rotateY(180deg);
-          bottom: unset;
-          &.card_0 {
-            top: 0;
+        background: #434343;
+        opacity: 0.7;
+        filter: blur(107px);
+      }
+    }
+    .item {
+      position: relative;
+      width: 100px;
+      height: 100px;
+      margin: 5px;
+      cursor: pointer;
+      overflow: hidden;
+      perspective: 1000px;
+      .card {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+        img {
+          @include absolute;
+          -webkit-backface-visibility: hidden; /* Safari */
+          backface-visibility: hidden;
+          &.back {
           }
-          &.card_1 {
-            top: -100px;
-          }
-          &.card_2 {
-            top: -200px;
-          }
-          &.card_3 {
-            top: -300px;
-          }
-          &.card_4 {
-            top: -400px;
-          }
-          &.card_5 {
-            top: -500px;
-          }
-          &.card_6 {
-            top: -600px;
-          }
-          &.card_7 {
-            top: -700px;
-          }
-          &.card_8 {
-            top: -800px;
-          }
-          &.card_9 {
-            top: -900px;
-          }
-          &.card_10 {
-            top: -1000px;
-          }
-          &.card_11 {
-            top: -1100px;
-          }
-          &.card_12 {
-            top: -1200px;
-          }
-          &.card_13 {
-            top: -1300px;
-          }
-          &.card_14 {
-            top: -1400px;
-          }
-          &.card_15 {
-            top: -1500px;
-          }
-          &.card_16 {
-            top: -1600px;
-          }
-          &.card_17 {
-            top: -1700px;
+          &.front {
+            transform: rotateY(180deg);
+            bottom: unset;
+            &.card_0 {
+              top: 0;
+            }
+            &.card_1 {
+              top: -100px;
+            }
+            &.card_2 {
+              top: -200px;
+            }
+            &.card_3 {
+              top: -300px;
+            }
+            &.card_4 {
+              top: -400px;
+            }
+            &.card_5 {
+              top: -500px;
+            }
+            &.card_6 {
+              top: -600px;
+            }
+            &.card_7 {
+              top: -700px;
+            }
+            &.card_8 {
+              top: -800px;
+            }
+            &.card_9 {
+              top: -900px;
+            }
+            &.card_10 {
+              top: -1000px;
+            }
+            &.card_11 {
+              top: -1100px;
+            }
+            &.card_12 {
+              top: -1200px;
+            }
+            &.card_13 {
+              top: -1300px;
+            }
+            &.card_14 {
+              top: -1400px;
+            }
+            &.card_15 {
+              top: -1500px;
+            }
+            &.card_16 {
+              top: -1600px;
+            }
+            &.card_17 {
+              top: -1700px;
+            }
           }
         }
       }
-    }
-    &.turned,
-    &.valid {
-      .card {
-        transform: rotateY(180deg);
+      &.turned,
+      &.valid {
+        .card {
+          transform: rotateY(180deg);
+        }
       }
     }
   }
