--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -41,13 +41,22 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  @media (max-width: 500px) {
+    height: auto;
+    overflow: auto;
+    overflow-x: hidden;
+  }
 }
 h1 {
   margin: 0 auto;
   font-size: 30px;
   text-align: center;
   margin-bottom: 45px;
+  @media (max-width: 500px) {
+    margin-bottom: 20px;
+  }
 }
+
 .board {
   position: relative;
   flex-direction: row;
@@ -84,6 +93,7 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
+    overflow: hidden;
     &.disable {
       &::after {
         content: '';
@@ -114,61 +124,21 @@ h1 {
           &.back {
           }
           &.front {
+            width: 100%;
             transform: rotateY(180deg);
             bottom: unset;
-            &.card_0 {
-              top: 0;
+            @for $i from 0 through 17 {
+              &.card_#{$i} {
+                top: calc(0px - #{$i * 100px});
+              }
             }
-            &.card_1 {
-              top: -100px;
-            }
-            &.card_2 {
-              top: -200px;
-            }
-            &.card_3 {
-              top: -300px;
-            }
-            &.card_4 {
-              top: -400px;
-            }
-            &.card_5 {
-              top: -500px;
-            }
-            &.card_6 {
-              top: -600px;
-            }
-            &.card_7 {
-              top: -700px;
-            }
-            &.card_8 {
-              top: -800px;
-            }
-            &.card_9 {
-              top: -900px;
-            }
-            &.card_10 {
-              top: -1000px;
-            }
-            &.card_11 {
-              top: -1100px;
-            }
-            &.card_12 {
-              top: -1200px;
-            }
-            &.card_13 {
-              top: -1300px;
-            }
-            &.card_14 {
-              top: -1400px;
-            }
-            &.card_15 {
-              top: -1500px;
-            }
-            &.card_16 {
-              top: -1600px;
-            }
-            &.card_17 {
-              top: -1700px;
+            @media (max-width: 1000px) {
+              $size: 75px;
+              @for $i from 0 through 17 {
+                &.card_#{$i} {
+                  top: calc(0px - #{$i * 75px});
+                }
+              }
             }
           }
         }
@@ -181,11 +151,24 @@ h1 {
       }
     }
   }
+
+  @media (max-width: 1000px) {
+    width: calc(9 * 75px + 9 * 4px);
+    .game {
+      .item {
+        width: 75px;
+        height: 75px;
+        margin: 2px;
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    width: calc(4 * 75px + 4 * 4px);
+  }
 }
 .progressBar {
   position: relative;
   height: 20px;
-
   width: calc(9 * 100px + 9 * 10px);
   margin: 0 auto;
   margin-top: 20px;
@@ -209,9 +192,26 @@ h1 {
       background: rgb(208, 0, 0);
     }
   }
+  @media (max-width: 1000px) {
+    width: calc(9 * 75px + 9 * 4px);
+    .game {
+      .item {
+        width: 75px;
+        height: 75px;
+        margin: 2px;
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    width: calc(4 * 75px + 4 * 4px);
+  }
+  @media (max-width: 400px) {
+    margin-bottom: 20px;
+  }
 }
 .introduction {
-  width: 350px;
+  width: 90%;
+  max-width: 350px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
