--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,6 +104,7 @@ h1 {
   right: 0;
   background: #434343;
   opacity: 0.7;
+  -webkit-filter: blur(107px);
   filter: blur(107px);
 }
 .board .game .item {
@@ -131,6 +132,9 @@ h1 {
   -webkit-backface-visibility: hidden;
   /* Safari */
   backface-visibility: hidden;
+}
+.board .game .item .card img.back {
+  width: 100%;
 }
 .board .game .item .card img.front {
   width: 100%;
