--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -100,6 +100,7 @@ h1 {
         @include absolute;
         background: #434343;
         opacity: 0.7;
+        -webkit-filter: blur(107px);
         filter: blur(107px);
       }
     }
@@ -122,6 +123,7 @@ h1 {
           -webkit-backface-visibility: hidden; /* Safari */
           backface-visibility: hidden;
           &.back {
+            width: 100%;
           }
           &.front {
             width: 100%;
