--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,21 @@
+@charset "UTF-8";
+/* 
+  j'importe une bibliotheque de mixin
+  elle me sert a definir certains element css redondant afin de garder une unité sur l'ensemble de l'application
+  il suffit de les appeler comme suit :
+  @include nomDeLaMixin();
+  le contenu de la mixin sera alors ajouté à l'endroit ou elle est appelé 
+*/
 * {
   box-sizing: border-box;
 }
 
 img {
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
-  user-select: none;
+  -ms-user-select: none;
+      user-select: none;
 }
 
 ul,
@@ -38,6 +46,7 @@ body {
   height: 100vh;
   overflow: hidden;
 }
+
 @media (max-width: 500px) {
   body {
     height: auto;
@@ -52,6 +61,7 @@ h1 {
   text-align: center;
   margin-bottom: 45px;
 }
+
 @media (max-width: 500px) {
   h1 {
     margin-bottom: 20px;
@@ -62,14 +72,22 @@ h1 {
   position: relative;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 990px;
+  /* 
+    je calcule la taille necessaire a mon board;
+    on a 36 carte en tout (18 paires) donc 4 ligne de 9
+    qui font 100px de large
+    j'y rajoute 5px de marge sur les côté
+  */
+  width: calc(9 * 100px + 9 * 10px);
   margin: 0 auto;
   background: #858585;
   display: none;
 }
+
 .board.display {
   display: flex;
 }
+
 .board .win,
 .board .lose {
   width: 100%;
@@ -80,14 +98,17 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+
 .board .win.display,
 .board .lose.display {
   display: flex;
 }
+
 .board .win .win_animation,
 .board .lose .win_animation {
   width: 50%;
 }
+
 .board .game {
   display: flex;
   flex-direction: row;
@@ -95,8 +116,9 @@ h1 {
   position: relative;
   overflow: hidden;
 }
+
 .board .game.disable::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -104,9 +126,9 @@ h1 {
   right: 0;
   background: #434343;
   opacity: 0.7;
-  -webkit-filter: blur(107px);
   filter: blur(107px);
 }
+
 .board .game .item {
   position: relative;
   width: 100px;
@@ -116,6 +138,7 @@ h1 {
   overflow: hidden;
   perspective: 1000px;
 }
+
 .board .game .item .card {
   position: relative;
   width: 100%;
@@ -123,6 +146,7 @@ h1 {
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
+
 .board .game .item .card img {
   position: absolute;
   top: 0;
@@ -133,68 +157,89 @@ h1 {
   /* Safari */
   backface-visibility: hidden;
 }
+
 .board .game .item .card img.back {
   width: 100%;
 }
+
 .board .game .item .card img.front {
   width: 100%;
   transform: rotateY(180deg);
   bottom: unset;
 }
+
 .board .game .item .card img.front.card_0 {
   top: calc(0px - 0px);
 }
+
 .board .game .item .card img.front.card_1 {
   top: calc(0px - 100px);
 }
+
 .board .game .item .card img.front.card_2 {
   top: calc(0px - 200px);
 }
+
 .board .game .item .card img.front.card_3 {
   top: calc(0px - 300px);
 }
+
 .board .game .item .card img.front.card_4 {
   top: calc(0px - 400px);
 }
+
 .board .game .item .card img.front.card_5 {
   top: calc(0px - 500px);
 }
+
 .board .game .item .card img.front.card_6 {
   top: calc(0px - 600px);
 }
+
 .board .game .item .card img.front.card_7 {
   top: calc(0px - 700px);
 }
+
 .board .game .item .card img.front.card_8 {
   top: calc(0px - 800px);
 }
+
 .board .game .item .card img.front.card_9 {
   top: calc(0px - 900px);
 }
+
 .board .game .item .card img.front.card_10 {
   top: calc(0px - 1000px);
 }
+
 .board .game .item .card img.front.card_11 {
   top: calc(0px - 1100px);
 }
+
 .board .game .item .card img.front.card_12 {
   top: calc(0px - 1200px);
 }
+
 .board .game .item .card img.front.card_13 {
   top: calc(0px - 1300px);
 }
+
 .board .game .item .card img.front.card_14 {
   top: calc(0px - 1400px);
 }
+
 .board .game .item .card img.front.card_15 {
   top: calc(0px - 1500px);
 }
+
 .board .game .item .card img.front.card_16 {
   top: calc(0px - 1600px);
 }
+
 .board .game .item .card img.front.card_17 {
   top: calc(0px - 1700px);
 }
+
 @media (max-width: 1000px) {
   .board .game .item .card img.front.card_0 {
     top: calc(0px - 0px);
@@ -251,12 +296,14 @@ h1 {
     top: calc(0px - 1275px);
   }
 }
+
 .board .game .item.turned .card, .board .game .item.valid .card {
   transform: rotateY(180deg);
 }
+
 @media (max-width: 1000px) {
   .board {
-    width: 711px;
+    width: calc(9 * 75px + 9 * 4px);
   }
   .board .game .item {
     width: 75px;
@@ -264,41 +311,48 @@ h1 {
     margin: 2px;
   }
 }
+
 @media (max-width: 500px) {
   .board {
-    width: 316px;
+    width: calc(4 * 75px + 4 * 4px);
   }
 }
 
 .progressBar {
   position: relative;
   height: 20px;
-  width: 990px;
+  width: calc(9 * 100px + 9 * 10px);
   margin: 0 auto;
   margin-top: 20px;
   background: #a2a2a2;
   display: none;
 }
+
 .progressBar.display {
   display: block;
 }
+
 .progressBar .bar {
   position: absolute;
   width: 100%;
   height: 100%;
 }
+
 .progressBar .bar.green {
   background: #13a200;
 }
+
 .progressBar .bar.orange {
   background: #d07d00;
 }
+
 .progressBar .bar.red {
   background: #d00000;
 }
+
 @media (max-width: 1000px) {
   .progressBar {
-    width: 711px;
+    width: calc(9 * 75px + 9 * 4px);
   }
   .progressBar .game .item {
     width: 75px;
@@ -306,11 +360,13 @@ h1 {
     margin: 2px;
   }
 }
+
 @media (max-width: 500px) {
   .progressBar {
-    width: 316px;
+    width: calc(4 * 75px + 4 * 4px);
   }
 }
+
 @media (max-width: 400px) {
   .progressBar {
     margin-bottom: 20px;
@@ -326,12 +382,15 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+
 .introduction.remove {
   display: none;
 }
+
 .introduction .leaderBoard {
   width: 100%;
 }
+
 .introduction button {
   background: none;
   border: none;
@@ -343,9 +402,9 @@ h1 {
   padding: 5px 20px;
   transition: all 0.3s ease-in-out;
 }
+
 .introduction button:hover {
   background: #151515;
   color: #fff;
 }
-
 /*# sourceMappingURL=main.css.map */
