--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -133,13 +133,25 @@ h1 {
             width: 100%;
             transform: rotateY(180deg);
             bottom: unset;
+            /*
+              on utilise la boucle for pour éviter de se répeter
+              si jamais on ne l'utilisait pas il aurait fallut donner une valeur pour chaque carte
+              &.card_1{
+                top : -100px
+              }
+              &.card_2{
+                top : -200px
+              }
+              etc ...
+
+              Gros gains de temps et pas de risque de se tromper
+            */
             @for $i from 0 through 17 {
               &.card_#{$i} {
                 top: calc(0px - #{$i * 100px});
               }
             }
             @media (max-width: 1000px) {
-              $size: 75px;
               @for $i from 0 through 17 {
                 &.card_#{$i} {
                   top: calc(0px - #{$i * 75px});
